# Soul

./: .env.example  .gitignore  .impeccable.md  README.md  claude-session.jsonl  codex-session.jsonl  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
.superstack/: competitive-landscape-soulbound-reputation.html  idea-context.md
api/: Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: app.module.spec.ts  app.module.ts  main.ts
contracts/: .solhint.json  Cargo.toml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/scripts/: deploy.ts
contracts/src/: AttestationRegistry.sol  ReputationAnchor.sol  SoulboundIdentity.sol  SoulboundToken.sol
contracts/test/: contracts.test.ts
frontend/: .eslintrc.json  Dockerfile  index.html  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
frontend/app/: WalletContext.tsx  _app.tsx  globals.css  layout.test.ts  layout.tsx  page.tsx  providers.tsx
frontend/components/: CopyData.tsx  Nav.tsx  ReputationDashboard.tsx  ScanSkeleton.tsx  StatusDot.tsx
frontend/hooks/: useCounter.ts  useParallax.ts  useWallet.ts
frontend/lib/: api.ts  mockData.ts  programs.ts
frontend/src/: App.tsx  index.css  main.tsx
graph-engine/: Cargo.toml  Dockerfile
graph-engine/src/: error.rs  graph.rs  lib.rs  main.rs  pagerank.rs  scoring.rs  sybil.rs
indexer/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
indexer/src/: index.ts  indexer.test.ts  (+1 more)
infra/: prometheus.yml
zk/: package.json
(+40 files in other folders)
