[package]
name = "rgp-graph-engine"
version = "0.1.0"
edition = "2021"
description = "Directed weighted graph engine with PageRank scoring and Sybil resistance for the Reputational Graph Protocol"

[[bin]]
name = "rgp-graph-engine"
path = "src/main.rs"

[lib]
name = "rgp_graph_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
dashmap = "5"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }
ordered-float = { version = "4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
